<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_margin="5dp"
        android:background="@drawable/border"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:id="@+id/toeic_textView"
            android:background="@drawable/background_title"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:textSize="30dp"
            android:gravity="center"
            android:text="@string/toeic_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_margin="5dp"
        android:background="@drawable/border"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:orientation="vertical">
        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_number_1"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/btn_colors_click"
                android:textSize="30dp"
                android:text="@string/thread_number_one"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"></Button>
            <Button
                android:id="@+id/btn_number_2"
                android:layout_marginLeft="3dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/btn_colors_click"
                android:textSize="30dp"
                android:text="@string/thread_number_two"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">
            </Button>
        </LinearLayout>
        <LinearLayout
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_number_3"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/btn_colors_click"
                android:textSize="30dp"
                android:text="@string/thread_number_three"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"></Button>
            <Button
                android:id="@+id/btn_number_4"
                android:layout_marginLeft="3dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/btn_colors_click"
                android:textSize="30dp"
                android:text="@string/thread_number_four"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">
            </Button>
        </LinearLayout>
        <LinearLayout
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_number_5"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/btn_colors_click"
                android:textSize="30dp"
                android:text="@string/thread_number_five"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"></Button>
            <Button
                android:id="@+id/btn_number_6"
                android:layout_marginLeft="3dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/btn_colors_click"
                android:textSize="30dp"
                android:text="@string/thread_number_six"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">
            </Button>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>